# lpensl_seminars

./: .gitignore  README.md  Seminar.ini  setup.cfg  setup.py
pyseminars/: cache.py  create_database.py  feeds.py  feeds_lpensl.ini  webapp.py
pyseminars/templates/: main.html
templates/: layout.html  main.html
