[metadata]
name = pyseminars
version = 1
description = pyseminars
long_description = :file README.md
license = CeCILL-B
classifier =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
url = https://github.com/jsalort/lpensl_seminars
project_urls =
    Source Code = https://github.com/jsalort/lpensl_seminars
author = Julien Salort
author_email = julien.salort@ens-lyon.fr

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    feedparser
    ics
    sqlalchemy_utils

[options.package_data]
* = *.ini
